# voxscribe

./: .gitignore  LICENSE  README.md  config.example.yaml  config.yaml  pyproject.toml
ansible/: deploy.yml  destroy.yml
extension/: extension.js  metadata.json  stylesheet.css
src/: client.py  daemon.py
src/voxscribe/: __init__.py  cli.py  daemon.py
systemd/: long-stt.service
