[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxscribe"
version = "1.0.0"
description = "Real-time speech-to-text daemon using OpenAI Realtime Transcription API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Frederik Berg" }
]
keywords = ["speech-to-text", "stt", "transcription", "openai", "realtime", "voice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "websockets>=12.0",
    "pyyaml>=6.0",
    "dbus-next>=0.2.3",
]

[project.urls]
Homepage = "https://github.com/frederikb/voxscribe"
Repository = "https://github.com/frederikb/voxscribe"

[project.scripts]
voxscribe = "voxscribe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/voxscribe"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
